// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatMessage it renders other messages 1`] = `
.c0 {
  border-bottom: 1px solid white;
  border-left: 1px solid white;
  background-color: rgba(87,186,255,0.7);
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 6px;
  padding: 15px;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  margin-top: 9px;
  max-width: 500px;
}

.c1 {
  font-size: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Roboto;
}

.c2 {
  color: #333;
}

.c3 {
  margin-left: 30px;
  color: #333;
}

.c4 {
  margin: 9px 0 0;
  font-family: Merriweather;
  font-size: 1.2em;
  line-height: 1.65em;
  color: #333;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      stefan
    </span>
    <span
      className="c3"
      hidden={false}
    >
      Thu, 01 Jan 1970 00:00:00 GMT
    </span>
  </div>
  <p
    className="c4"
  >
    this is another chat message
  </p>
</div>
`;

exports[`ChatMessage it renders own messages 1`] = `
.c0 {
  border-bottom: 1px solid white;
  border-right: 1px solid white;
  background-color: rgba(23,130,255,0.7);
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 0px;
  padding: 15px;
  border-top-left-radius: 6px;
  border-top-right-radius: 6px;
  margin-top: 9px;
  max-width: 500px;
}

.c1 {
  font-size: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  font-family: Roboto;
}

.c2 {
  color: #333;
}

.c3 {
  margin-left: 30px;
  color: #333;
}

.c4 {
  margin: 9px 0 0;
  font-family: Merriweather;
  font-size: 1.2em;
  line-height: 1.65em;
  color: #333;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
    >
      christian
    </span>
    <span
      className="c3"
      hidden={false}
    >
      Thu, 01 Jan 1970 00:00:00 GMT
    </span>
  </div>
  <p
    className="c4"
  >
    this is my chat message
  </p>
</div>
`;
